Fix spacing of content under navbar; invert nav color

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -1,3 +1,4 @@
 @import "bootstrap";
 @import "bootstrap/theme";
 @import "font-awesome";
+@media (min-width: 981px) { body { padding-top: 60px; } }
